name:                hosrm
version:             0.1.0.0
synopsis:            Interacting with the OSRM HTTP API
description:         Please see README.md
homepage:            https://github.com/daniel-j-h/hosrm#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J. Hofmann
maintainer:          daniel@trvx.org
copyright:           Daniel J. Hofmann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hosrm
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       protolude
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude
