name:                hosrm
version:             0.1.0.0
synopsis:            Interacting with the OSRM HTTP API
description:         Please see README.md
homepage:            https://github.com/daniel-j-h/hosrm-qa#readme
license:             BSD3
license-file:        LICENSE
author:              Daniel J. Hofmann
maintainer:          daniel@trvx.org
copyright:           Daniel J. Hofmann
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable hosrm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:
    Args
    Api
    Response
    Store
    Enum
  default-language:    Haskell2010
  ghc-options:         -Wall
  default-extensions:  NoImplicitPrelude

  build-depends:
    base                  >= 4.8 && < 4.10,
    protolude             >= 0.1 && < 0.2,
    text                  >= 1.2 && < 1.3,
    mtl                   >= 2.2 && < 2.3,
    optparse-applicative  >= 0.12 && < 0.13,
    servant               >= 0.7 && < 0.8,
    servant-client        >= 0.7 && < 0.8,
    http-client           >= 0.4 && < 0.5,
    aeson                 >= 0.11 && < 0.12,
    persistent            >= 2.2 && < 2.6,
    persistent-template   >= 2.1 && < 2.6,
    persistent-sqlite     >= 2.2 && < 2.6,
    resourcet             >= 1.1 && < 1.2,
    monad-logger          >= 0.3 && < 0.4
